--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.5.1",
     "vitest": "^0.31.1",
-    "vue-tsc": "^1.6.5"
+    "vue-tsc": "^1.6.5",
+    "workbox-window": "^7.0.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
