--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@iconify-json/solar": "^1.1.1",
     "@supabase/supabase-js": "^2.24.0",
     "@unhead/vue": "^1.1.27",
@@ -24,12 +26,14 @@
     "@unocss/runtime": "^0.53.1",
     "@vueuse/core": "^10.1.2",
     "@vueuse/head": "^1.1.26",
+    "codemirror": "^6.0.1",
     "grapesjs": "^0.21.2",
     "grapesjs-preset-webpage": "^1.0.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
     "unocss-ui": "0.0.3-alpha.4",
     "vue": "^3.3.4",
+    "vue-codemirror": "^6.1.1",
     "vue-demi": "^0.14.5",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.1",
