--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@vueuse/core": "^10.1.2",
     "@vueuse/head": "^1.1.26",
     "codemirror": "^6.0.1",
+    "file-saver": "^2.0.5",
     "grapesjs": "^0.21.2",
     "grapesjs-preset-webpage": "^1.0.3",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
     "unocss-ui": "0.0.3-alpha.4",
