--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
     "nprogress": "^0.2.0",
+    "openai": "^3.3.0",
     "pinia": "^2.1.3",
     "unocss-ui": "0.0.3-alpha.4",
     "vue": "^3.3.4",
