--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@8.5.1",
   "scripts": {
     "build": "vite-ssg build",
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3333 --open --host",
     "lint": "eslint .",
     "preview": "vite preview",
     "preview-https": "serve dist",
@@ -22,6 +22,7 @@
     "@unhead/vue": "^1.1.27",
     "@unocss/reset": "^0.52.7",
     "@unocss/runtime": "^0.53.1",
+    "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.1.2",
     "@vueuse/head": "^1.1.26",
     "file-saver": "^2.0.5",
