--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@iconify-json/solar": "^1.1.2",
     "@supabase/supabase-js": "^2.33.1",
     "@unhead/vue": "^1.3.9",
@@ -27,6 +28,7 @@
     "@vueuse/head": "^1.3.1",
     "axios": "^1.5.0",
     "file-saver": "^2.0.5",
+    "highlight.js": "^11.8.0",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
     "lint-staged": "^14.0.1",
