--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vueuse/components": "^10.4.1",
     "@vueuse/core": "^10.4.1",
     "@vueuse/head": "^1.3.1",
+    "@vueuse/motion": "^2.0.0",
     "axios": "^1.5.0",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.8.0",
