--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
+    "@ffmpeg/util": "^0.12.1",
     "@highlightjs/vue-plugin": "^2.1.0",
     "@iconify-json/solar": "^1.1.2",
     "@supabase/supabase-js": "^2.33.1",
@@ -27,11 +28,13 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/head": "^1.3.1",
     "@vueuse/motion": "^2.0.0",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^1.5.0",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.8.0",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
+    "lamejs": "github:zhuker/lamejs",
     "lint-staged": "^14.0.1",
     "nprogress": "^0.2.0",
     "openai": "^3.3.0",
